--- a/index.html
+++ b/index.html
@@ -160,6 +160,23 @@
       <div class="robo-texto">Posso ajudar?</div>
     </a>
   </div>
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-analytics.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyDryJc0Y7JV_Os5DZdEDts5XaFUEtJ7wDk",
+    authDomain: "centrodecompra-5fa91.firebaseapp.com",
+    projectId: "centrodecompra-5fa91",
+    storageBucket: "centrodecompra-5fa91.firebasestorage.app",
+    messagingSenderId: "276696026262",
+    appId: "1:276696026262:web:979a68c0796ea1d17346b7",
+    measurementId: "G-PM11NQL61N"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 
   <script defer src="/firebase.js"></script>
   <script defer src="/script.js"></script>
