--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
-    script-src 'self' 'unsafe-inline' https://www.gstatic.com;
+    script-src 'self' 'unsafe-inline' https://www.gstatic.com https://www.googletagmanager.com;
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com;
     img-src 'self' data: https://drive.google.com https://*.googleusercontent.com https://firebasestorage.googleapis.com;
     font-src 'self' https://fonts.gstatic.com;
-    connect-src 'self' https://api-centro-de-compras.onrender.com;
+    connect-src 'self' https://api-centro-de-compras.onrender.com https://firebase.googleapis.com https://firebaseinstallations.googleapis.com;
   ">
   <title>Painel Admin - Centro de Compras</title>
   <link rel="stylesheet" href="/style.css" media="print" onload="this.media='all'">
